[gd_scene load_steps=15 format=3 uid="uid://1puix00mhy8b"]

[ext_resource type="Texture2D" uid="uid://c5rwdvef67oep" path="res://Assets/Sprites/BlueSquareEnemySprite copy.png" id="1_mnvsh"]
[ext_resource type="Script" uid="uid://o2vbalvxx13j" path="res://Scripts/square_enemy.gd" id="1_omeaj"]
[ext_resource type="PackedScene" uid="uid://dxidibs7rd68f" path="res://Scenes/Enemies/projectile_launcher.tscn" id="2_6lmlw"]
[ext_resource type="PackedScene" uid="uid://s81a8opp5kg8" path="res://Scenes/Effects/blood_splat.tscn" id="2_apyv8"]
[ext_resource type="PackedScene" uid="uid://bu47na2aprlhq" path="res://Scenes/Enemies/square_shield_segment.tscn" id="5_apyv8"]
[ext_resource type="PackedScene" uid="uid://b4r3004pbyfho" path="res://Scenes/Components/hurtbox.tscn" id="5_lq68a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6lmlw"]
atlas = ExtResource("1_mnvsh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_omeaj"]
atlas = ExtResource("1_mnvsh")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8kgs"]
atlas = ExtResource("1_mnvsh")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq68a"]
atlas = ExtResource("1_mnvsh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_apyv8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lmlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omeaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8kgs")
}],
"loop": false,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq68a")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3a3e"]
size = Vector2(26, 26)

[sub_resource type="Curve" id="Curve_omeaj"]
_data = [Vector2(0.0162602, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.36039, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o8kgs"]
size = Vector2(28, 28)

[node name="SquareEnemy" type="CharacterBody2D"]
z_index = 3
collision_layer = 8
collision_mask = 4
script = ExtResource("1_omeaj")
blood_splat_scene = ExtResource("2_apyv8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_apyv8")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_v3a3e")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
one_shot = true
explosiveness = 0.7
randomness = 1.0
emission_shape = 2
emission_sphere_radius = 10.0
direction = Vector2(0, 0)
spread = 90.0
gravity = Vector2(0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 5.0
scale_amount_min = 2.0
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_omeaj")
color = Color(0.845341, 0.000162417, 0.0440511, 1)

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCastLeft" type="RayCast2D" parent="RayCasts"]
position = Vector2(0, -13)
target_position = Vector2(-15, 0)
collision_mask = 12

[node name="RayCastLeft2" type="RayCast2D" parent="RayCasts"]
position = Vector2(0, 13)
target_position = Vector2(-15, 0)
collision_mask = 12

[node name="RayCastDown" type="RayCast2D" parent="RayCasts"]
position = Vector2(13, 0)
target_position = Vector2(0, 14)
collision_mask = 12

[node name="RayCastDown2" type="RayCast2D" parent="RayCasts"]
position = Vector2(-13, 0)
target_position = Vector2(0, 14)
collision_mask = 12

[node name="RayCastRight" type="RayCast2D" parent="RayCasts"]
position = Vector2(0, -13)
target_position = Vector2(15, 0)
collision_mask = 12

[node name="RayCastRight2" type="RayCast2D" parent="RayCasts"]
position = Vector2(0, 13)
target_position = Vector2(15, 0)
collision_mask = 12

[node name="RayCastUp" type="RayCast2D" parent="RayCasts"]
position = Vector2(-13, 0)
target_position = Vector2(0, -15)
collision_mask = 12

[node name="RayCastUp2" type="RayCast2D" parent="RayCasts"]
position = Vector2(13, 0)
target_position = Vector2(0, -15)
collision_mask = 12

[node name="ProjectileLaunchers" type="Node2D" parent="."]

[node name="ProjectileLauncher" parent="ProjectileLaunchers" instance=ExtResource("2_6lmlw")]
position = Vector2(15, 0)
direction = Vector2(1, 0)

[node name="ProjectileLauncher2" parent="ProjectileLaunchers" instance=ExtResource("2_6lmlw")]
position = Vector2(0, -15)
direction = Vector2(0, -1)

[node name="ProjectileLauncher3" parent="ProjectileLaunchers" instance=ExtResource("2_6lmlw")]
position = Vector2(-15, 0)
direction = Vector2(-1, 0)

[node name="ProjectileLauncher4" parent="ProjectileLaunchers" instance=ExtResource("2_6lmlw")]
position = Vector2(0, 14)
direction = Vector2(0, 1)

[node name="Timers" type="Node" parent="."]

[node name="DamageTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="DirectionTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="DeathTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="Hurtbox" parent="." instance=ExtResource("5_lq68a")]
collision_layer = 8
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_o8kgs")

[node name="SquareShieldSegment" parent="." instance=ExtResource("5_apyv8")]
position = Vector2(0, -17)

[connection signal="timeout" from="Timers/DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="Timers/DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="timeout" from="Timers/DeathTimer" to="." method="_on_death_timer_timeout"]
